local storage function

--- a/dom.html
+++ b/dom.html
@@ -27,16 +27,12 @@
                 <input type="text" name="" id="input" class="form-control mr-2">
                 <input type="submit" value="Submit" class="btn btn-dark col-md-4">
             </form>
-            <button class="btn btn-primary" id="btn">Click Here</button>
+            <!-- <button class="btn btn-primary" id="btn">Click Here</button> -->
             <h2 class="title">Items</h2>
             <ul class="list-group" id="items">
-                <li class="list-group-item d-flex justify-content-between">Item 1 
-                    <i class="fa-solid fa-x delete text-danger"></i>
-                </li>
-                <li class="list-group-item">Item 2</li>
-                <li class="list-group-item">Item 3</li>
-                <li class="list-group-item">Item 4</li>
+                
             </ul>
+            <button class="btn btn-primary" id="btn">Clear</button>
         </div>
         <!-- <div id="box" style="width: 400px; height: 400px; background-color: aquamarine;">
     
